--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "build": "npx tsc",
     "start": "node dist/index.mjs",
     "dev": "npx tsc -w & nodemon dist/index.mjs",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "NODE_ENV=test NODE_OPTIONS=--experimental-vm-modules yarn exec jest --maxWorkers=1 --runInBand"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/jest": "^29.5.12",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
@@ -20,7 +21,8 @@
     "jest": "^29.7.0",
     "mongodb": "^6.6.2",
     "mongoose": "^8.4.0",
-    "supertest": "^7.0.0"
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.1.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
