--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "mongodb": "^6.6.2",
     "mongoose": "^8.4.0",
     "supertest": "^7.0.0",
-    "ts-jest": "^29.1.3"
+    "ts-jest": "^29.1.3",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
